<resources>
    <string name="app_name">Advanced Tourists Guide</string>
    <string name="name">Name</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_id">Email id</string>
    <string name="register">Register</string>
    <string name="pass_helper">password must be atleast 6 characters</string>
    <string name="end_mail">gmail.com</string>
    <string name="mydescription">mydescription</string>
</resources>